# big-pic-preview

./: .gitignore  .pre-commit-config.yaml  README.md  current_movie_results.csv  movies.csv  predictions.csv  pyproject.toml  score.py  scores.csv  summer_movie_preview_predictions.csv  tmdb_details.json
.github/workflows/: ci.yml  deploy.yml  refresh.yml
games/: games.json
games/2025-summer/: movies.csv  predictions.csv  results.csv  tmdb_details.json
games/2026-summer/: movies.csv  results.csv  tmdb_details.json
scripts/: fetch_current_results.py  fetch_movie_ids.py  fetch_results.py  fetch_tmdb_details.py  games.py  schemas.py  score.py
site/: astro.config.mjs  og-template.html  package-lock.json  package.json
site/public/: CNAME
site/scripts/: regenerate-og-image.mjs
site/src/components/: EpisodeLinks.astro  MovieCard.astro  PageHero.astro  RulesPanel.astro  ScoreSummary.astro  ScoreTable.astro  Scoreboard.astro  SeasonSwitcher.astro
site/src/data/: episodes.ts  games.ts  scoreboard.ts  scoring.test.ts  scoring.ts
site/src/layouts/: BaseLayout.astro
site/src/lib/: format.test.ts  format.ts  paths.ts
site/src/pages/: 2025-by-2026-rules.astro  colophon.astro  index.astro
site/src/pages/games/: [id].astro
site/src/scripts/: confetti.ts  scoreboard.ts
site/src/styles/: colophon.css  scoreboard.css  site.css
site/src/templates/: OgImage.astro
tests/: test_fetch_movie_ids.py  test_fetch_results.py  test_fetch_tmdb_details.py  test_schemas.py
