[project]
name = "big-pic-summer-movie-preview"
version = "0.1.0"
description = "Data cleanup scripts for Big Picture summer movie preview predictions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "polars>=1.30.0",
    "tmdbsimple>=2.9.6",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
