[project]
name = "big-pic-summer-movie-preview"
version = "0.1.0"
description = "Data cleanup scripts for Big Picture summer movie preview predictions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "polars>=1.30.0",
    "python-dotenv>=1.2.2",
    "sparqlwrapper>=2.0.0",
    "tmdbsimple>=2.9.6",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

# Mirror pytest's pythonpath so editors/type-checkers resolve the flat imports
# between scripts (e.g. `import schemas`, `import fetch_movie_ids`).
[tool.pyright]
extraPaths = ["scripts"]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "UP"]
